--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -21,6 +21,11 @@ pipeline {
                 }
             }
         }
+        stage('Sanity check') {
+            steps {
+                input "Does the staging environment look ok?"
+            }
+        }
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
